Fixing bug 316879:

I hope this time the implementation of optimization for int-only operations
is the right one. review=brendan